--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# For perl
 blib/
 .build/
 _build/
@@ -14,3 +15,9 @@ META.yml
 MYMETA.yml
 nytprof.out
 pm_to_blib
+
+# For mac OS X
+.DS_Store
+
+# For eclipse
+.project
